--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -4,12 +4,12 @@
       <img src="../../../assets/images/PANDOlogo.png" alt="PANDO" (click)="linkMe('home')">
     </div>
     <div class="set-9">
-      <input type="text" placeholder="Búscar en PANDO..." class="bar-search" disabled>
+      <input type="text" placeholder="Búscar en Mexicolectivo..." class="bar-search" disabled>
     </div>
   </div>
 
   <div class="set-6 navigation">
-    <button type="button">
+    <!-- <button type="button">
       <span>Ciudadanos</span>
     </button>
 
@@ -19,6 +19,9 @@
 
     <button type="button">
       <span>Comité Ciudadano</span>
+    </button> -->
+    <button type="button">
+      <span>Pensamiento colectivo</span>
     </button>
 
     <span class="sep">|</span>
