--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,11 +19,9 @@
           </div>
         </div>
 
-        <div class="set-12 layouts">
-          <button type="button" class="cat" *ngFor="let layout of document.layouts"
-            [style.background-image]="'url('+layout.images[0]+')'"
-            (click)="linkMe('/documentos/' + document._id + '/categoria/' + layout._id)">
-            <span class="grad-txt">{{layout.category.name}}</span>
+        <div class="set-12 txt-center">
+          <button type="button" mat-raised-button color="primary">
+            Visitar Documento
           </button>
         </div>
       </div>
