--- a/src/app/hub/components/admin-template/admin-template.component.scss
+++ b/src/app/hub/components/admin-template/admin-template.component.scss
@@ -1,4 +1,7 @@
 :host {
+  width: 100%;
+  float: left;
+
   .toptools {
     text-align: right;
     display: flex;
@@ -56,6 +59,7 @@
   }
 
   .emptycard {
+    width: 100% !important;
     display: flex;
     align-items: center;
     justify-content: center;
