--- a/src/app/components/add-document-collaborator/add-document-collaborator.component.scss
+++ b/src/app/components/add-document-collaborator/add-document-collaborator.component.scss
@@ -1,7 +1,13 @@
 :host {
+  min-height: 170px;
+
   .dialog-head {
     display: flex;
     align-items: center;
+
+    h3 {
+      margin-bottom: 10px;
+    }
   }
 
   .dialog-body {
@@ -13,6 +19,15 @@
 
     .ctrls {
       text-align: right;
+    }
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
