--- a/src/app/components/add-document-layout/add-document-layout.component.html
+++ b/src/app/components/add-document-layout/add-document-layout.component.html
@@ -1,102 +1,107 @@
-<div class="set-12 dialog-head">
-  <div class="set-10">
-    <h3 class="txt-left">{{document.title}}</h3>
-    <p class="bycopy">
-      <i>
-        <small>By: {{document.createdBy.firstname}} {{document.createdBy.lastname}}</small>
-      </i>
-    </p>
-  </div>
-  <div class="set-2 txt-right">
-    <button type="button" mat-icon-button color="primary" matTooltip="Salir" matTooltipClass="tooltip"
-      (click)="killDialog()" [disabled]="isSubmitted">
-      <mat-icon>cancel</mat-icon>
-    </button>
-  </div>
-</div>
-
 <div class="set-12 loading" *ngIf="!isDataAvailable">
   <mat-spinner diameter="50"></mat-spinner>
 </div>
 
-<div class="set-12 dialog-body" *ngIf="isDataAvailable">
-  <input type="file" #file (change)="onFileSelected($event)" multiple>
-  <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
-    <mat-step [stepControl]="stepOneFormGroup">
-      <ng-template matStepLabel>
-        <small>Agrega una descripción</small>
-      </ng-template>
+<div class="set-12" *ngIf="isDataAvailable">
+  <div class="set-12 dialog-head">
+    <div class="set-10">
+      <h3 class="txt-left">{{document.title}}</h3>
+      <p class="bycopy">
+        <i>
+          <small>By: {{document.createdBy.firstname}} {{document.createdBy.lastname}}</small>
+        </i>
+      </p>
+    </div>
+    <div class="set-2 txt-right">
+      <button type="button" mat-icon-button color="primary" matTooltip="Salir" matTooltipClass="tooltip"
+        (click)="killDialog()" [disabled]="isSubmitted">
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </div>
+  </div>
 
-      <div class="set-12 step-content">
-        <form [formGroup]="stepOneFormGroup">
-          <div class="set-9">
+  <div class="set-12 dialog-body">
+    <input type="file" #file (change)="onFileSelected($event)" multiple>
+    <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
+      <mat-step [stepControl]="stepTwoFormGroup">
+        <ng-template matStepLabel>
+          <small>Agrega tu esquema</small>
+        </ng-template>
+
+        <div class="set-12 step-content">
+          <div class="set-12">
             <mat-form-field appearance="outline">
-              <mat-label>Descripción</mat-label>
-              <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
+              <mat-label>Búscar categoría</mat-label>
+              <mat-chip-list #chipList>
+                <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
+                  {{category}}
+                  <button matChipRemove>
+                    <mat-icon>cancel</mat-icon>
+                  </button>
+                </mat-chip>
+
+                <input placeholder="..." #categoryInput [formControl]="categoryCtrl" [matAutocomplete]="auto"
+                  [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                  (matChipInputTokenEnd)="addCategory($event)" (keydown.enter)="onEnterKey($event)">
+                <!-- <button type="button" matSuffix disabled>
+                  <mat-icon>save</mat-icon>
+                </button> -->
+              </mat-chip-list>
+
+              <mat-autocomplete #auto="matAutocomplete" (optionSelected)="categorySelected($event)">
+                <mat-option *ngFor="let category of filteredCategories | async" [value]="category">
+                  <small>{{category}}</small>
+                </mat-option>
+              </mat-autocomplete>
             </mat-form-field>
           </div>
 
-          <div class="set-3">
-            <button type="button" class="upload-img" (click)="file.click()">
-              <mat-icon>add_a_photo</mat-icon>
-            </button>
+          <div class="set-12 ctrls">
+            <button type="button" mat-raised-button color="accent" (click)="popAddRootCategoryDialog()">Nueva
+              categoría</button>
+            <button type="button" mat-raised-button color="primary" matStepperNext
+              [disabled]="stepTwoFormGroup.invalid">Siguiente</button>
           </div>
-        </form>
-        <div class="set-12 txt-right">
-          <button type="button" mat-raised-button color="primary" matStepperNext
-            [disabled]="stepOneFormGroup.invalid">Siguiente</button>
         </div>
-      </div>
+      </mat-step>
 
-      <div class="set-12 file-hldr" *ngIf="fileNames.length != 0">
-        <p *ngFor="let name of fileNames">
-          <small>{{name}}</small>
-        </p>
-      </div>
-    </mat-step>
+      <mat-step>
+        <ng-template matStepLabel>
+          <small>Agrega una descripción</small>
+        </ng-template>
 
-    <mat-step>
-      <ng-template matStepLabel>
-        <small>Agrega tu esquema</small>
-      </ng-template>
-      <div class="set-12 step-content">
-        <div class="set-12">
-          <mat-form-field appearance="outline">
-            <mat-label>Búscar categoría</mat-label>
-            <mat-chip-list #chipList>
-              <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
-                {{category}}
-                <button matChipRemove>
-                  <mat-icon>cancel</mat-icon>
-                </button>
-              </mat-chip>
+        <div class="set-12 step-content">
+          <form [formGroup]="stepOneFormGroup">
+            <div class="set-9">
+              <mat-form-field appearance="outline">
+                <mat-label>Descripción</mat-label>
+                <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
+              </mat-form-field>
+            </div>
 
-              <input placeholder="..." #categoryInput [formControl]="categoryCtrl" [matAutocomplete]="auto"
-                [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                (matChipInputTokenEnd)="addCategory($event)" (keydown.enter)="onEnterKey($event)">
-              <button type="button" matSuffix disabled>
-                <mat-icon>save</mat-icon>
+            <div class="set-3">
+              <button type="button" class="upload-img" (click)="file.click()">
+                <mat-icon>add_a_photo</mat-icon>
               </button>
-            </mat-chip-list>
-
-            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="categorySelected($event)">
-              <mat-option *ngFor="let category of filteredCategories | async" [value]="category">
-                <small>{{category}}</small>
-              </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
+            </div>
+          </form>
+          <div class="set-12 ctrls">
+            <button type="button" mat-raised-button color="primary" matStepperPrevious
+              [disabled]="isSubmitted">Atras</button>
+            <button type="button" mat-raised-button color="accent" [disabled]="stepTwoFormGroup.invalid || isSubmitted"
+              (click)="onCreateLayout()">
+              <span>Guardar</span>
+            </button>
+            <mat-spinner diameter="20" *ngIf="isSubmitted"></mat-spinner>
+          </div>
         </div>
 
-        <div class="set-12 ctrls">
-          <button type="button" mat-raised-button color="primary" matStepperPrevious
-            [disabled]="isSubmitted">Atras</button>
-          <button type="button" mat-raised-button color="accent" [disabled]="stepTwoFormGroup.invalid || isSubmitted"
-            (click)="onCreateLayout()">
-            <span>Guardar</span>
-          </button>
-          <mat-spinner diameter="20" *ngIf="isSubmitted"></mat-spinner>
+        <div class="set-12 file-hldr" *ngIf="fileNames.length != 0">
+          <p *ngFor="let name of fileNames">
+            <small>{{name}}</small>
+          </p>
         </div>
-      </div>
-    </mat-step>
-  </mat-stepper>
+      </mat-step>
+    </mat-stepper>
+  </div>
 </div>
