--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -9,6 +9,8 @@
     box-shadow: 0px 1px 11px rgba(0, 0, 0, 0.1);
     position: fixed;
     z-index: 300;
+    top: 0;
+    left: 0;
   }
 
   .logo {
@@ -34,7 +36,7 @@
   }
 
   .bar-search:disabled {
-    opacity: .4;
+    opacity: .6;
     cursor: not-allowed;
   }
 
