--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -178,7 +178,9 @@
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Título</th>
               <td mat-cell *matCellDef="let element">
-                <a href="javascript:void(0)" (click)="linkSubcategory(element._id)">{{element.category.name}}</a>
+                <button type="button" class="catbtn" (click)="linkSubcategory(element._id)">
+                  {{element.category.name}}
+                </button>
               </td>
             </ng-container>
 
