--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -24,7 +24,7 @@
         <div class="set-12 imghldr">
           <mat-icon *ngIf="document.images.length == 0">panorama</mat-icon>
           <img [src]="document.images[0]" alt="" *ngIf="document.images.length != 0">
-          <div class="overlay" *ngIf="document.images.length == 0">
+          <div class="overlay" (click)="popImageViewer()">
             <mat-icon>photo_camera</mat-icon>
             <div class="cover"></div>
           </div>
