--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -30,6 +30,10 @@
         <div class="set-12 imghldr">
           <mat-icon *ngIf="subcategory.images.length == 0">panorama</mat-icon>
           <img [src]="subcategory.images[0]" alt="" *ngIf="subcategory.images.length != 0">
+          <div class="overlay" *ngIf="document.images.length == 0">
+            <mat-icon>photo_camera</mat-icon>
+            <div class="cover"></div>
+          </div>
         </div>
 
         <div class="set-12 infohldr">
@@ -40,18 +44,18 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
-                <button mat-menu-item>
+                <button mat-menu-item (click)="popEditCategoryDialog()">
                   <mat-icon>edit</mat-icon>
                   <span>Editar</span>
                 </button>
-                <button mat-menu-item>
+                <!-- <button mat-menu-item>
                   <mat-icon>cloud_upload</mat-icon>
                   <span>Cargar template</span>
                 </button>
                 <button mat-menu-item>
                   <mat-icon>cloud_download</mat-icon>
                   <span>Descargar template</span>
-                </button>
+                </button> -->
               </mat-menu>
             </div>
           </div>
@@ -100,7 +104,8 @@
             </p>
 
             <ol class="top-list">
-              <li class="top-list-item" *ngFor="let solution of solutions.slice(0, 4);" (click)="linkSolution(solution._id, solution.theme._id)">
+              <li class="top-list-item" *ngFor="let solution of solutions.slice(0, 4);"
+                (click)="linkSolution(solution._id, solution.theme._id)">
                 <span>{{solution.title}}</span>
               </li>
             </ol>
@@ -150,7 +155,9 @@
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element" (click)="linkTopic(element._id)">
-                <a href="javascript:void(0)">{{element.title}}</a>
+                <button type="button" class="catbtn">
+                  {{element.title}}
+                </button>
               </td>
             </ng-container>
 
