--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -24,7 +24,7 @@
           >
             <mat-icon>create_new_folder</mat-icon>
           </button>
-          <p>Agregar solución</p>
+          <p>Agregar Comentario</p>
         </div>
 
         <div class="button-box">
