--- a/src/app/public-documents/components/solutions-card/solutions-card.component.html
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="doc-description" style="height: 280px">
+<mat-card class="doc-description" style="min-height: 280px">
   <div class="solutions-box" style="text-align: start">
     <p class="title">Soluciones</p>
     <table class="mt-2">
