--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="set-8">
       <div class="main-box">
-        <panel-subcategory [data]="category.subLayouts" [selectedID]="subcategory._id"></panel-subcategory>
+        <panel-subcategory [data]="subcategory.topics" [selectedID]="subcategory._id"></panel-subcategory>
         <div class="set-12 container-titles">
           <div class="set-6 title">
             <p>
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="set-12">
-          <div class="set-6">
+          <div class="set-6" style="min-height: 500px;">
             <table mat-table [dataSource]="solutionsDataSource" class="mat-elevation-z8">
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef></th>
@@ -68,8 +68,8 @@
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
           </div>
-          <div class="set-6">
-            <table mat-table [dataSource]="problemsDataSource" class="mat-elevation-z8">
+          <div class="set-6" style="min-height: 500px;">
+            <table mat-table [dataSource]="topicsDataSource" class="mat-elevation-z8">
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
