add redirect to public documents

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,9 +6,9 @@
   <div class="set-12 ds-page">
     <div class="cover"></div>
 
-    <!-- <div class="set-12 info">
+    <div class="set-12 info">
       <div class="set-12 txt-center">
-        <button type="button" class="grad-txt" (click)="linkMe('/documentos/' + document._id)">
+        <button type="button" class="grad-txt" (click)="linkMe('/documentos-publicos/' + document._id)">
           {{document.title}}
         </button>
 
@@ -27,7 +27,7 @@
           </button>
         </div>
       </div>
-    </div> -->
+    </div>
   </div>
 
   <div class="set-12 ds-page">
