--- a/src/app/hub/single-user/single-user.component.html
+++ b/src/app/hub/single-user/single-user.component.html
@@ -2,7 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="innerhldr" *ngIf="isDataAvailable">
+<div class="set-12 innerhldr" *ngIf="isDataAvailable">
   <div class="set-4 col-lft">
     <mat-card class="set-12">
       <div class="set-12 cardimg">
