--- a/src/app/components/slider-images/slider-images.component.html
+++ b/src/app/components/slider-images/slider-images.component.html
@@ -1,17 +1,17 @@
 <div class="container">
+  <div class="ctrls">
+    <button type="button" mat-icon-button (click)="killImage()">
+      <mat-icon>cancel</mat-icon>
+    </button>
+  </div>
   <div class="actions left">
     <button mat-mini-fab color="warn" aria-label="Back" (click)="onBack()">
       <mat-icon>chevron_left</mat-icon>
     </button>
   </div>
   <div class="content" #contentScroll>
-    <img
-      *ngFor="let image of images; let i = index"
-      class="item"
-      [class.active]="activeIndex == i"
-      alt="img-list"
-      [src]="image"
-    />
+    <img *ngFor="let image of images; let i = index" class="item" [class.active]="activeIndex == i" alt="img-list"
+      [src]="image" />
   </div>
   <div class="actions right" [ngClass]="showNext ? 'show' : 'hide'">
     <button mat-mini-fab color="warn" aria-label="Next" (click)="onNext()">
