--- a/src/app/components/slider-images/slider-images.component.scss
+++ b/src/app/components/slider-images/slider-images.component.scss
@@ -48,11 +48,11 @@
       }
 
       &.right {
-        right: 0;
+        right: 10px;
       }
 
       &.left {
-        left: 0;
+        left: 10px;
       }
 
       button {
@@ -64,7 +64,7 @@
         }
 
         &:hover {
-          background-color: rgba(250, 250, 250, 0.6);
+          background-color: rgba(250, 250, 250, 0.9);
 
           mat-icon {
             color: rgba(100, 100, 100, 0.7);
@@ -80,11 +80,13 @@
     display: block;
     transform: scale(1.1);
   }
+
   50% {
     // opacity: 0.6;
   }
-  80% {
-  }
+
+  80% {}
+
   100% {
     opacity: 1;
     transform: scale(1);
