--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -30,7 +30,7 @@
         <div class="set-12 imghldr">
           <mat-icon *ngIf="subcategory.images.length == 0">panorama</mat-icon>
           <img [src]="subcategory.images[0]" alt="" *ngIf="subcategory.images.length != 0">
-          <div class="overlay" *ngIf="document.images.length == 0">
+          <div class="overlay" (click)="popImageViewer()">
             <mat-icon>photo_camera</mat-icon>
             <div class="cover"></div>
           </div>
