--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
   <div class="set-12 ds-page">
     <div class="cover"></div>
 
-    <div class="set-12 info">
+    <div class="set-12 info" *ngIf="document != null">
       <div class="set-12 txt-center">
         <button type="button" class="grad-txt" (click)="linkMe('/documentos/' + document._id)">
           {{document.title}}
