--- a/src/app/hub/components/editor-template/editor-template.component.html
+++ b/src/app/hub/components/editor-template/editor-template.component.html
@@ -1,3 +1,7 @@
+<div class="set-12 toptools">
+  <strong><small>DOCUMENTOS</small></strong>
+</div>
+
 <!-- empty documents -->
 <div class="set-12" *ngIf="documents.length == 0 && isDataAvailable">
   <div class="set-12 carousel-hldr">
