--- a/src/app/components/slider-images/slider-images.component.scss
+++ b/src/app/components/slider-images/slider-images.component.scss
@@ -2,6 +2,13 @@
   width: 100%;
   margin: 0;
 
+  .ctrls {
+    margin-bottom: 20px;
+    button {
+      margin: 0 10px;
+    }
+  }
+
   .container {
     width: 100%;
     height: 100%;
