--- a/src/app/hub/components/editor-template/editor-template.component.scss
+++ b/src/app/hub/components/editor-template/editor-template.component.scss
@@ -1,4 +1,25 @@
 :host {
+  width: 100%;
+  float: left;
+
+  .toptools {
+    text-align: right;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 20px;
+    }
+  }
+
   .carousel-hldr {
     margin-bottom: 20px;
 
