--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -6,9 +6,10 @@
   <div class="set-12">
     <div class="set-6">
       <breadcrumbs-component>
-        <li class="breadcrumb-item">Perfil</li>
         <li>Documentos</li>
-        <li *ngIf="!!document.title; else noTitle">{{ document.title }}</li>
+        <li *ngIf="!!document.title; else noTitle" (click)="utilityService.linkMe('/documentos/' + document._id)">
+          {{ document.title }}
+        </li>
         <ng-template #noTitle>
           <div>categoria</div>
         </ng-template>
