--- a/src/app/documents/single-solution/single-solution.component.html
+++ b/src/app/documents/single-solution/single-solution.component.html
@@ -2,11 +2,10 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div *ngIf="isDataAvailable">
+<div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12">
     <div class="set-6">
       <breadcrumbs-component>
-        <li class="breadcrumb-item">Perfil</li>
         <li>Documentos</li>
         <li>{{ document.title }}</li>
         <li>{{ category.category.name }}</li>
@@ -20,171 +19,85 @@
           {{category.createdBy.lastname}}</span>
       </span>
     </div>
-  </div>  
-  
-  <div class="header">
-    <breadcrumbs-component>
-    </breadcrumbs-component>
-    <div class="actions-rigth">
-
-      <div class="button-group">
-        <button
-          type="button"
-          mat-mini-fab
-          class="mini test"
-          matTooltip="Agregar testimonio"
-          (click)="popAddDocumentTestimony()"
-        >
-          <mat-icon>forum</mat-icon>
-        </button>
-        <p>Agregar testimonio</p>
-      </div>
-      <!--div class="button-group">
-        <button
-          type="button"
-          mat-mini-fab
-          class="mini warn"
-          matTooltip="Agregar problema"
-          (click)="popAddDocumentTheme()"
-        >
-          <mat-icon>warning</mat-icon>
-        </button>
-
-        <p>Agregar Problema</p>
-      </div-->
-
-      <!--div class="button-group">
-        <button
-          type="button"
-          mat-mini-fab
-          class="mini insights"
-          matTooltip="Agregar Solución"
-          (click)="popAddDocumentSolution()"
-        >
-          <mat-icon>insights</mat-icon>
-        </button>
-
-        <p>Agregar Solución</p>
-      </div-->
-    </div>
   </div>
-  
 
-  <div class="body">
-
-    <mat-card class="images-card">
-
-      <div class="set-12 imghldr" *ngIf="solution.images.length == 0">
-        <mat-icon >panorama</mat-icon>
-      </div>
-
-      <slider-images [images]="sliderImages" *ngIf="solution.images.length != 0"></slider-images>
-
-      <div class="footer">
-        <label class="item">
-          <mat-icon color="primary">add_circle</mat-icon>
-          <input
-            type="file"
-            accept="image/*"
-            id="addImageInput"
-            (change)="handleSelectImage($event)"
-            multiple
-          />
-        </label>
-        <avatars-row [users]="collaborators"></avatars-row>
-      </div>
-    </mat-card>
-
-    <mat-card class="about-card">
-      <div class="box">
-        <p class="title">Título</p>
-        <p class="text">{{ solution.title }}</p>
-      </div>
-
-      <div class="box">
-        <p class="title">Descripción</p>
-        <p class="text">{{ solution.description }}</p>
-      </div>
-
-    </mat-card>
-
-    <!--div class="table-card">
-      <div>
-        <mat-form-field appearance="outline">
-          <mat-label>Cobertura</mat-label>
-          <mat-select [value]="document.coverage[0]._id">
-            <mat-option *ngFor="let option of document.coverage" [value]="option._id">
-              <small>{{ option.name | titlecase }}</small>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-
-      <mat-card>
-        <div>
-          <p class="list-title">
-            <small>Soluciones</small>
-            <mat-icon class="icon-insights">insights</mat-icon>
-          </p>
+  <div class="set-12">
+    <div class="set-3 col-left">
+      <mat-card class="set-12 doc-description">
+        <div class="set-12 imghldr">
+          <mat-icon *ngIf="solution.images.length == 0">panorama</mat-icon>
+          <slider-images [images]="solution.images" *ngIf="solution.images.length != 0"></slider-images>
+          <div class="overlay">
+            <mat-icon>photo_camera</mat-icon>
+            <div class="cover"></div>
+          </div>
         </div>
 
-        <table mat-table [dataSource]="solutions" class="problems-table">
-          
-          <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">{{ element.title }}</td>
-          </ng-container>
-
-          
-          <ng-container matColumnDef="ranking">
-            <th mat-header-cell *matHeaderCellDef>Ranking</th>
-            <td mat-cell *matCellDef="let element">0</td>
-          </ng-container>
-
-          
-          <ng-container matColumnDef="users">
-            <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-            <td mat-cell *matCellDef="let element">0</td>
-          </ng-container>
-
-          
-          <ng-container matColumnDef="interactions">
-            <th mat-header-cell *matHeaderCellDef>Interacciones</th>
-            <td mat-cell *matCellDef="let element">
-              0
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
+        <div class="set-12 infohldr">
+          <div class="set-12 card-title">
+            <div class="set-10">{{solution.title}}</div>
+            <div class="set-2 txt-right">
+              <button type="button" [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item>
+                  <mat-icon>edit</mat-icon>
+                  <span>Editar documento</span>
+                </button>
+                <button mat-menu-item [disabled]="solution.inCover">
+                  <mat-icon>home</mat-icon>
+                  <span>Usar como portada</span>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>edit_note</mat-icon>
+                  <span>{{solution.coverDescription ? 'Editar' : 'Agregar'}} texto portada</span>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>lock</mat-icon>
+                  <span>Marcar como {{solution.isPublic ? 'Privado' : 'Público'}}</span>
+                </button>
+              </mat-menu>
+            </div>
+          </div>
+          <p class="card-description" *ngIf="document.description != null">{{document.description}}</p>
+          <button type="button" class="toolbtn" *ngIf="document.description == null">
+            <small>Agregar descripción</small>
+          </button>
+          <avatars-row [users]="collaborators"></avatars-row>
+        </div>
       </mat-card>
-    </div-->
+    </div>
 
-    <!--mat-card class="card-chart donut">
-      <p class="title">Título de la gráfica</p>
-      <div class="content">
-        <canvas
-          class="donut-chart"
-          baseChart
-          [data]="data"
-          [type]="'doughnut'"
-          [options]="chartOptions"
-        ></canvas>
+    <div class="set-9 col-rgt">
+      <div class="set-12">
+        <div class="set-4">&nbsp;
+          <mat-form-field appearance="outline">
+            <mat-label>Cobertura</mat-label>
+            <mat-select disabled="">
+              <!-- <mat-option *ngFor="let option of solution.coverage" [value]="option._id">
+                <small>{{ option.name | titlecase }}</small>
+              </mat-option> -->
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="set-8 txt-right">
+          <button type="button" mat-mini-fab color="accent" class="mini test" matTooltip="Agregar Comentario">
+            <mat-icon>forum</mat-icon>
+          </button>
+          <button type="button" mat-mini-fab color="primary" class="mini test" matTooltip="Agregar Testimonio">
+            <mat-icon>forum</mat-icon>
+          </button>
+          <!-- <button type="button" mat-mini-fab color="warn" class="mini insights" matTooltip="Agregar Solución">
+            <mat-icon>insights</mat-icon>
+          </button> -->
+        </div>
       </div>
-    </mat-card-->
 
-    <mat-card class="card-chart circle">
-      <p class="title">Título de la gráfica</p>
-      <div class="content">
-        <canvas
-          class="donut-chart"
-          baseChart
-          [data]="data"
-          [type]="'doughnut'"
-          [options]="chartOptions"
-        ></canvas>
-      </div>
-    </mat-card>
+      <mat-card class="set-12 about-card">
+        <p class="title">{{ solution.title }}</p>
+        <p class="description">{{ solution.description }}</p>
+      </mat-card>
+    </div>
   </div>
 </div>
