--- a/src/app/documents/single-solution/single-solution.component.scss
+++ b/src/app/documents/single-solution/single-solution.component.scss
@@ -5,9 +5,21 @@
   width: 100%;
   height: auto;
 
+  .col-rgt {
+    padding-left: 30px;
+  }
+
+  .doc-description {
+    padding: 0 !important;
+  }
+
+  mat-card:not(:first-child) {
+    margin-top: 20px;
+  }
+
   .imghldr {
-    min-height: 150px;
-    max-height: 150px;
+    min-height: 250px;
+    max-height: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,204 +39,209 @@
       object-fit: contain;
     }
   }
-  
-  .header {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
 
-    > * {
+  .infohldr {
+    padding: 20px;
+
+    .toolbtn {
+      transition: all .2s linear;
+    }
+
+    .toolbtn:hover {
+      color: #306EFF;
+    }
+  }
+
+  .card-title {
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+
+  .card-description {
+    text-align: justify;
+    font-size: 11pt;
+    color: #636363;
+
+    &.link {
+      margin-top: 10pt;
+      display: inline-block;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+
+  button.mini {
+    margin-left: 20px;
+
+    mat-icon {
+      font-size: 14pt !important;
+      color: #fff;
+    }
+  }
+
+  .inner-card {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+
+    * {
       margin: 0;
     }
 
-    .actions-rigth {
+    .roundico-green,
+    .roundico-orange {
+      width: 70px;
+      height: 70px;
+      border-radius: 100%;
+      overflow: hidden;
       display: flex;
-      justify-content: center;
-      align-items: flex-start;
-    }
-    .button-group {
-      display: flex;
-      flex-direction: column;
       align-items: center;
-      max-width: 110px;
+      justify-content: center;
+      margin-right: 20px;
 
-      p {
-        font-size: 11pt;
-        text-align: center;
-        margin-top: 10pt;
-        color: #636363;
+      mat-icon {
+        font-size: 20pt !important;
       }
+    }
 
-      .test {
-        background-color: #9747ff;
+    .roundico-green {
+      background: #E1F2EC;
+
+      mat-icon {
+        color: #20C588;
       }
+    }
 
-      .warn {
-        background-color: #e98282;
+    .roundico-orange {
+      background: #FCDBC3;
+
+      mat-icon {
+        color: #FF6D00;
+      }
+    }
+
+    mat-icon {
+      font-size: 30pt;
+    }
+  }
+
+  .inner-card:last-child {
+    margin-bottom: 0;
+  }
+
+  .info-lists {
+    padding: 1.5em;
+
+    p.list-title {
+      display: flex;
+      align-items: center;
+      font-weight: 600;
+
+      * {
+        margin: 0;
       }
 
       mat-icon {
-        color: #fff;
+        margin-left: 10px;
+
+        &.icon-insights {
+          color: #20C588;
+        }
+
+        &.icon-warnings {
+          color: #E98282;
+        }
+      }
+    }
+
+    .top-list {
+      margin-top: 15pt;
+      counter-reset: orderedlist;
+
+      .top-list-item {
+        list-style: none;
+        font-weight: 600;
+        border-bottom: 1px solid #DBDBDB;
+        padding: 0.6em 0;
+
+        &:before {
+          counter-increment: orderedlist;
+          content: counter(orderedlist);
+          font-weight: 400;
+          margin-right: 15pt;
+          color: #131313
+        }
+      }
+    }
+
+    .set-4:nth-child(1) {
+      padding-right: 20px;
+    }
+
+    .set-4:nth-child(2) {
+      padding: 0 10px;
+    }
+
+    .set-4:nth-child(3) {
+      padding-left: 20px;
+    }
+  }
+
+  .about-card {
+    margin-top: 0 !important;
+
+    p.title {
+      font-weight: 600;
+      font-size: 13pt;
+      text-transform: uppercase;
+      letter-spacing: 2pt;
+    }
+
+    p.description {
+      margin-top: 20px;
+    }
+  }
+
+  .topic-list {
+    margin-top: 20px;
+
+    .title {
+      font-weight: 600;
+      font-size: 13pt;
+      text-transform: uppercase;
+      letter-spacing: 2pt;
+    }
+
+    .problems-table {
+      th.mat-header-cell:first-of-type {
+        padding: 0 !important;
+      }
+
+      tr:last-child {
+        .mat-cell {
+          border: 0 !important;
+        }
+      }
+
+      .mat-cell {
+        padding: 0.5em 0;
+      }
+
+      .mat-column-actions {
+        width: 50px;
+        padding-right: 0;
+        text-align: right;
       }
     }
   }
 
-  .body {
-    display: grid;
-    column-gap: 25pt;
-    row-gap: 25pt;
-    grid-template-columns: repeat(12, 1fr);
-    // grid-template-rows: 3fr;
-    margin-top: 15pt;
-
-    .images-card {
-      grid-area: 1 / 1 / 2 / 5;
-      width: 100%;
-      padding: 0;
-      display: flex;
-      overflow: hidden;
-      flex-direction: column;
-
-      .footer {
-        width: 100%;
-        padding: 2em;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        > * {
-          margin: 0;
-        }
-      }
-
-      avatars-row {
-        margin: 0;
-      }
-
-      carousel-component {
-        width: 100%;
-      }
-
-      .render-images {
-        width: 1800px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-
-        > * {
-          margin: 0;
-        }
-
-        .item {
-          width: 100%;
-          height: 550px;
-          object-fit: cover;
-          border-radius: 5px;
-        }
-
-        label.item {
-          display: flex;
-          min-width: 150px;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-        }
-      }
-    }
-
-    .about-card {
-      grid-area: 1 / 5 / 2 / 13;
-      width: 100%;
-      padding: 2em;
-
-      .box {
-        margin-bottom: 2em;
-        
-        .title {
-          font-size: 12pt;
-          font-weight: 500;
-          color: rgb(161, 161, 161);
-          margin-bottom: 0.7em;
-        }
-
-        .text {
-          font-size: 12pt;
-          color: #000;
-          letter-spacing: 1px;
-          line-height: 15pt;
-        }
-      }
-    }
-
-    .table-card {
-      grid-area: 2 / 5 / 3 / 13;
-      width: 100%;
-
-      .mat-column-title {
-        text-align: left;
-        padding-left: 0;
-        font-weight: bold;
-      }
-
-      .mat-column-title {
-        text-align: left;
-        padding-left: 0;
-        font-weight: bold;
-      }
-
-      .list-title {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-
-        small {
-          margin: 0;
-          margin-right: 7pt;
-        }
-
-        mat-icon {
-          margin: 0;
-          color: #20c588;
-        }
-      }
-    }
-
-    .card-chart {
-      width: 100%;
-
-      // display: flex;
-      // justify-content: center;
-
-      &.donut {
-        grid-area: 2 / 1 / 3 / 5;
-      }
-      // &.bars {
-      //   grid-column: 4 / 12;
-      // }
-      &.circle {
-        grid-area: 3 / 1 / 4 / 5;
-      }
-
-      .title {
-        font-size: 12pt;
-        font-weight: 600;
-        text-transform: uppercase;
-      }
-
-      // .content {
-      // display: grid;
-      // grid-template-columns: 10fr 3fr;
-
-      // display: flex;
-      // justify-content: center;
-      // width: 100%;
-
-      // .label {
-      //   font-size: 11pt;
-      //   max-width: 100px;
-      // }
-      // }
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
