--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -2,11 +2,10 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div *ngIf="isDataAvailable" class="content">
+<div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12">
     <div class="set-6">
       <breadcrumbs-component>
-        <li class="breadcrumb-item">Perfil</li>
         <li>Documentos</li>
         <li>{{ document.title }}</li>
         <li>{{ category.category.name }}</li>
@@ -30,32 +29,48 @@
           <mat-icon>panorama</mat-icon>
         </div>
 
-        <slider-images [images]="sliderImages" *ngIf="topic.images.length != 0">
-        </slider-images>
-        
-        <div class="footer">
-          <label class="item">
+        <!-- <slider-images [images]="sliderImages" *ngIf="topic.images.length != 0">
+        </slider-images> -->
+
+        <div class="set-12 infohldr">
+          <div class="set-12 card-title">
+            <div class="set-10">{{topic.title}}</div>
+            <div class="set-2 txt-right">
+              <button type="button" [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item>
+                  <mat-icon>edit</mat-icon>
+                  <span>Editar tema</span>
+                </button>
+              </mat-menu>
+            </div>
+          </div>
+          <p class="card-description" *ngIf="topic.description != null">{{topic.description}}</p>
+          <!-- <label class="item">
             <mat-icon color="primary">add_circle</mat-icon>
             <input type="file" accept="image/*" id="addImageInput" (change)="handleSelectImage($event)" multiple />
-          </label>
+          </label> -->
+          <button type="button" class="toolbtn" *ngIf="topic.description == null">
+            <small>Agregar descripción</small>
+          </button>
           <avatars-row [users]="collaborators"></avatars-row>
         </div>
       </mat-card>
 
       <mat-card class="set-12 card-chart donut">
-
         <p class="title">Título de la gráfica</p>
         <div class="content">
           <canvas class="donut-chart" baseChart [data]="data" [type]="'doughnut'" [options]="chartOptions"></canvas>
         </div>
 
       </mat-card>
-
     </div>
 
     <div class="set-9 col-rgt">
-      <div class="set-12 item-card">
-        <div class="set-8" style="padding-left: 10px;">
+      <div class="set-12">
+        <div class="set-4">
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
             <mat-select [value]="document.coverage[0]._id">
@@ -65,43 +80,36 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="set-4 txt-right">
-          <button type="button" mat-mini-fab color="accent" class="mini test" matTooltip="Agregar Testimonio"
+        <div class="set-8 txt-right">
+          <button type="button" mat-mini-fab color="accent" class="mini test" matTooltip="Agregar Comentario">
+            <mat-icon>forum</mat-icon>
+          </button>
+          <button type="button" mat-mini-fab color="primary" class="mini test" matTooltip="Agregar Testimonio"
             (click)="popAddDocumentTestimony()">
             <mat-icon>forum</mat-icon>
           </button>
-
-          <button type="button" mat-mini-fab class="mini insights" matTooltip="Agregar Solución"
+          <button type="button" mat-mini-fab color="warn" class="mini insights" matTooltip="Agregar Solución"
             (click)="popAddDocumentSolution()">
             <mat-icon>insights</mat-icon>
           </button>
         </div>
       </div>
-      <mat-card class="set-12 about-card">
-        <div class="box">
-          <p class="title">Título</p>
-          <p class="text">{{ topic.title }}</p>
-        </div>
 
-        <div class="box">
-          <p class="title">Descripción</p>
-          <p class="text">{{ topic.description }}</p>
-        </div>
+      <mat-card class="set-12 about-card">
+        <p class="title">{{ topic.title }}</p>
+        <p class="description">{{ topic.description }}</p>
       </mat-card>
 
-      <mat-card class="set-12 about-card">
-        <div>
-          <p class="list-title">
-            <small>Soluciones</small>
-            <mat-icon class="icon-insights">insights</mat-icon>
-          </p>
-        </div>
+      <mat-card class="set-12 topic-list">
+        <p class="title">Soluciones</p>
 
         <table mat-table [dataSource]="solutions" class="problems-table">
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element" (click)="linkSolution(element._id)">
-              <a href="javascript:void(0)">{{ element.title }}</a>
+            <td mat-cell *matCellDef="let element">
+              <button type="button" class="catbtn" (click)="linkSolution(element._id)">
+                {{ element.title }}
+              </button>
             </td>
           </ng-container>
 
@@ -110,12 +118,10 @@
             <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
 
-
           <ng-container matColumnDef="users">
             <th mat-header-cell *matHeaderCellDef>Usuarios</th>
             <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
-
 
           <ng-container matColumnDef="interactions">
             <th mat-header-cell *matHeaderCellDef>Interacciones</th>
