--- a/src/app/documents/single-theme/single-theme.component.scss
+++ b/src/app/documents/single-theme/single-theme.component.scss
@@ -5,28 +5,25 @@
   width: 100%;
   height: auto;
 
-  .content {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    // background-color: orange;
+  .col-rgt {
+    padding-left: 30px;
   }
 
   .doc-description {
-    padding: 10px;
+    padding: 0 !important;
   }
 
-  .mat-card {
-    padding: 10px;
+  mat-card:not(:first-child) {
+    margin-top: 20px;
   }
 
   .imghldr {
-    min-height: 150px;
-    max-height: 150px;
+    min-height: 250px;
+    max-height: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba($color: #ceddff, $alpha: 0.4);
+    background: rgba($color: #CEDDFF, $alpha: 0.4);
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
     overflow: hidden;
 
@@ -43,72 +40,33 @@
     }
   }
 
-  .header {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+  .infohldr {
+    padding: 20px;
 
-    >* {
-      margin: 0;
+    .toolbtn {
+      transition: all .2s linear;
+    }
+
+    .toolbtn:hover {
+      color: #306EFF;
     }
   }
 
-  .about-card {
-    grid-column: 5 / 13;
-    width: 100%;
-    padding: 2em;
-    margin: 10px;
-
-    .box {
-      margin-bottom: 2em;
-
-      .title {
-        font-size: 12pt;
-        font-weight: 500;
-        color: rgb(161, 161, 161);
-        margin-bottom: 0.7em;
-      }
-
-      .text {
-        font-size: 12pt;
-        color: #000;
-        letter-spacing: 1px;
-        line-height: 15pt;
-      }
-    }
+  .card-title {
+    margin-bottom: 10px;
+    font-weight: bold;
   }
 
-  .actions-rigth {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-  }
+  .card-description {
+    text-align: justify;
+    font-size: 11pt;
+    color: #636363;
 
-  .button-group {
-    float: left;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 110px;
-
-    p {
-      font-size: 11pt;
-      text-align: center;
+    &.link {
       margin-top: 10pt;
-      color: #636363;
-    }
-
-    .test {
-      background-color: #9747ff;
-    }
-
-    .warn {
-      background-color: #e98282;
-    }
-
-    mat-icon {
-      color: #fff;
+      display: inline-block;
+      text-decoration: underline;
+      cursor: pointer;
     }
   }
 
@@ -121,148 +79,169 @@
     }
   }
 
-  .body {
-    //display: grid;
-    width: 100%;
-    column-gap: 25pt;
-    row-gap: 25pt;
-    grid-template-columns: repeat(12, 1fr);
-    // grid-template-rows: 3fr;
-    margin-top: 15pt;
+  .inner-card {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 20px;
 
-    .images-card {
-      grid-area: 1 / 1 / 2 / 5;
-      width: 100%;
-      padding: 0;
-      display: flex;
+    * {
+      margin: 0;
+    }
+
+    .roundico-green,
+    .roundico-orange {
+      width: 70px;
+      height: 70px;
+      border-radius: 100%;
       overflow: hidden;
-      flex-direction: column;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 20px;
 
-      .footer {
-        width: 100%;
-        padding: 2em;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        >* {
-          margin: 0;
-        }
-      }
-
-      avatars-row {
-        margin: 0;
-      }
-
-      carousel-component {
-        width: 100%;
-      }
-
-      .render-images {
-        width: 1800px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-
-        >* {
-          margin: 0;
-        }
-
-        .item {
-          width: 100%;
-          height: 550px;
-          object-fit: cover;
-          border-radius: 5px;
-        }
-
-        label.item {
-          display: flex;
-          min-width: 150px;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-        }
+      mat-icon {
+        font-size: 20pt !important;
       }
     }
 
-    .header {
-      grid-column: 5 / 13;
-      width: 100%;
+    .roundico-green {
+      background: #E1F2EC;
+
+      mat-icon {
+        color: #20C588;
+      }
+    }
+
+    .roundico-orange {
+      background: #FCDBC3;
+
+      mat-icon {
+        color: #FF6D00;
+      }
+    }
+
+    mat-icon {
+      font-size: 30pt;
     }
   }
 
-  .table-card {
-    margin: 10px;
-    grid-column: 5 / 13;
-    width: 100%;
+  .inner-card:last-child {
+    margin-bottom: 0;
+  }
 
-    .mat-column-title {
-      text-align: left;
-      padding-left: 0;
-      font-weight: bold;
-    }
+  .info-lists {
+    padding: 1.5em;
 
-    .mat-column-title {
-      text-align: left;
-      padding-left: 0;
-      font-weight: bold;
-    }
-
-    .list-title {
+    p.list-title {
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      font-weight: 600;
 
-      small {
+      * {
         margin: 0;
-        margin-right: 7pt;
       }
 
       mat-icon {
-        margin: 0;
-        color: #20c588;
+        margin-left: 10px;
+
+        &.icon-insights {
+          color: #20C588;
+        }
+
+        &.icon-warnings {
+          color: #E98282;
+        }
+      }
+    }
+
+    .top-list {
+      margin-top: 15pt;
+      counter-reset: orderedlist;
+
+      .top-list-item {
+        list-style: none;
+        font-weight: 600;
+        border-bottom: 1px solid #DBDBDB;
+        padding: 0.6em 0;
+
+        &:before {
+          counter-increment: orderedlist;
+          content: counter(orderedlist);
+          font-weight: 400;
+          margin-right: 15pt;
+          color: #131313
+        }
+      }
+    }
+
+    .set-4:nth-child(1) {
+      padding-right: 20px;
+    }
+
+    .set-4:nth-child(2) {
+      padding: 0 10px;
+    }
+
+    .set-4:nth-child(3) {
+      padding-left: 20px;
+    }
+  }
+
+  .about-card {
+    margin-top: 0 !important;
+
+    p.title {
+      font-weight: 600;
+      font-size: 13pt;
+      text-transform: uppercase;
+      letter-spacing: 2pt;
+    }
+
+    p.description {
+      margin-top: 20px;
+    }
+  }
+
+  .topic-list {
+    margin-top: 20px;
+
+    .title {
+      font-weight: 600;
+      font-size: 13pt;
+      text-transform: uppercase;
+      letter-spacing: 2pt;
+    }
+
+    .problems-table {
+      th.mat-header-cell:first-of-type {
+        padding: 0 !important;
+      }
+
+      tr:last-child {
+        .mat-cell {
+          border: 0 !important;
+        }
+      }
+
+      .mat-cell {
+        padding: 0.5em 0;
+      }
+
+      .mat-column-actions {
+        width: 50px;
+        padding-right: 0;
+        text-align: right;
       }
     }
   }
 
-  .card-chart {
-    margin-top: 10px;
-    padding: 10px;
-    background-color: white;
-    width: 100%;
-
-    // display: flex;
-    // justify-content: center;
-
-    &.donut {
-      grid-area: 2 / 1 / 3 / 5;
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
-
-    // &.bars {
-    //   grid-column: 4 / 12;
-    // }
-    &.circle {
-      grid-area: 3 / 1 / 4 / 5;
-    }
-
-    .title {
-      font-size: 12pt;
-      font-weight: 600;
-      text-transform: uppercase;
-    }
-
-    // .content {
-    // display: grid;
-    // grid-template-columns: 10fr 3fr;
-
-    // display: flex;
-    // justify-content: center;
-    // width: 100%;
-
-    // .label {
-    //   font-size: 11pt;
-    //   max-width: 100px;
-    // }
-    // }
   }
 }
