--- a/src/app/public-documents/components/modal-votes/modal-votes.component.html
+++ b/src/app/public-documents/components/modal-votes/modal-votes.component.html
@@ -44,6 +44,6 @@
     </table>
   </div>
   <div class="modal-footer">
-    <button class="button" mat-raised-button color="primary">Enviar</button>
+    <button class="button" mat-raised-button color="primary" (click)="vote()">Enviar</button>
   </div>
 </div>
