--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -74,7 +74,7 @@
                 <p>
                   Relevancia ciudadana
                   <br />
-                  <b>8</b>
+                  <b>{{votes}}</b>
                 </p>
                 <button
                   mat-raised-button
